# hexbreaker

./: .gitignore  LICENSE  PLAN_REGISTRY.md  README.md  SUBMISSION.md  pyproject.toml
docker/: Dockerfile
docs/: accuracy.md  architecture.md  autonomy.md  benchmark_datasheet.md  brittleness.md  competitors.md  dataset.md  demo_runbook.md  demo_shot_list.md  devpost.md  mcp.md  repro.md  sift_verification.md  spec_axr_v1.md  trailer_vo_script.md
prompts/: defender.md  prosecutor.md  provocateur.md  witness.md
scripts/: brittleness.py  build_demo_video.py  build_playwright_demo.py  build_screencast_demo.py  build_thumbnail.py  build_trailer.py  build_vo.py  court_on_nist.py  court_on_nist_fsm.py  demo_self_correction.py  inspect_video.py  registry_teardown.py  sweep.py
sweeps/: 2026-05-27_N10_baseline.json  2026-05-27_N10_shuffled.json  2026-05-28_N10_final_arch.json  2026-05-28_N10_judge.json  2026-05-28_N20_full.json  2026-05-28_N40_signed_audit.json  2026-05-29_C2_multi.json  2026-05-29_N40_signed_audit.json  2026-05-30_N40_jr01b_signed.json  2026-05-30_breadth3_signed.json  2026-06-06_breadth_perprompt_signed.json  code-review-2026-05-27.json  rehunt_prefetch_triple_leak.py
tests/: conftest.py  test_cheatresist_amcache.py  test_cheatresist_browser.py  test_cheatresist_multi_artifact.py  test_cheatresist_prefetch.py  test_cheatresist_registry_persistence.py  test_cheatresist_timestomp.py  test_court_on_nist_fsm_honesty.py  test_court_runner.py  test_court_runner_multi.py  test_e2e_stub.py  test_forge_case.py  test_hmac_chain.py  test_judge.py  test_llm.py  (+21 more)
(+125 files in other folders)
