[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hexbreaker"
version = "0.0.1"
description = "Adversarial DFIR triage and benchmark for the SANS Find Evil! hackathon"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Alexander Sorrell", email = "alexander.sorrell.it@gmail.com" }]
keywords = ["dfir", "forensics", "ai", "adversarial", "benchmark", "sans", "find-evil"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.11",
  "Topic :: Security",
]
dependencies = [
  "anthropic>=0.40",
  "httpx>=0.27",
  "tenacity>=8",
  "orjson>=3.10",
  "rich>=13",
  "pydantic>=2.7",
  "click>=8",
]

[project.optional-dependencies]
test = ["pytest>=8", "pytest-asyncio>=0.23"]
deepseek = ["openai>=1.40"]  # DeepSeek API is OpenAI-compatible

[project.scripts]
hexbreaker = "hexbreaker.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
